--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap');
+
+* {
+	font-family: 'Jost', sans-serif;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container {
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	margin: 0 auto;
+	width: 60%;
+	max-width: 414px;
+	min-width: 200px;
+	text-align: center;
+	background:  #1b1b1b;
+}
+
+.input-container {
+	background-color: #2d3339;
+	height: 150px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+	padding: 0; 
+}
+
+input {
+	font-family: 'Roboto', sans-serif;
+	width: calc(100% - 20px);
+	text-align: right;
+	letter-spacing: 2px;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: #e2e2e2;
+	padding-left: 0;
+}
+
+input:first-child{
+	font-weight: 500;
+	font-size: 45px;
+	caret-color: #8caed7;
+}
+input:last-child {
+	caret-color: transparent;
+	font-size: 40px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.keypad {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-auto-rows: minmax(60px, auto);
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
+.keypad button {
+	margin: 5px;
+	background-color: #212326;
+	color: #d8e3f5;
+	font-size: 25px;
+	font-weight: 400;
+	border: none;
+	border-radius: 50%; 
+	cursor: pointer;
+	font-weight: 500;
+}
+
+.keypad button:hover {
+	opacity: 0.7;
+}
+
+.keypad button.AC {
+	grid-column: 1/4;
+	grid-row: 1;
+	border-radius: 25px;
+	background-color: #4d415f;
+	font-weight: 400;
+}
+.keypad button.equal {
+	background-color: #1d4972;
+}
+
+.keypad button.zero {
+	grid-column: 1/3;
+	grid-row: 5;
+	border-radius: 25px; 
+}
+
+.keypad button.operator {
+	background-color:  #3d4856;
+}
+
+@media (min-width: 415px) {
+	.container{
+		min-width: 415px;
+	}
+	.input-container {
+		height: 250px;	
+	}
+	input:first-child{
+		font-weight: 500;
+		font-size: 80px;
+	}
+	input:last-child {
+		font-size: 70px;
+	  }
+    .keypad button {
+        width: 85px;
+        height: 85px; 
+		font-size: 45px;
+		font-weight: 500;
+    }
+	.keypad button.AC {
+		border-radius: 40px;
+		width: 285px;
+	}
+	.keypad button.zero {
+		border-radius: 40px; 
+		width: 185px;
+	}
+
 }
